force-app/main/default/objects/FAP_Country__mdt/FAP_Country__mdt.object-meta.xml
<CustomObject>
    <description>FAP - Stores Country Code</description>
    <label>Country</label>
    <pluralLabel>Country</pluralLabel>
</CustomObject>