force-app/main/default/objects/FAP_Country__mdt/fields/Enable_for_FAP__c.field-meta.xml
<CustomField>
    <fullName>Enable_for_FAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable for FAP?</label>
    <type>Checkbox</type>
</CustomField>