force-app/main/default/objects/FAP_Country__mdt/fields/FAP_Country_Value__c.field-meta.xml
<CustomField>
    <fullName>FAP_Country_Value__c</fullName>
    <label>FAP Country Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>