force-app/main/default/objects/FAP_Country__mdt/fields/FAP_Region__c.field-meta.xml
<CustomField>
    <fullName>FAP_Region__c</fullName>
    <label>FAP Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>