force-app/main/default/objects/FAP_Country__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EC-EMEA</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>America</fullName>
            </value>
            <value>
                <fullName>NA/Canada</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>