force-app/main/default/objects/FAP_Country__mdt/fields/States__c.field-meta.xml
<CustomField>
    <fullName>States__c</fullName>
    <label>States</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>