force-app/main/default/objects/FAP_Country__mdt/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>kilometers</fullName>
            </value>
            <value>
                <fullName>miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>