force-app/main/default/objects/FAP_Country__mdt/fields/User_Language_Locale_Key__c.field-meta.xml
<CustomField>
    <fullName>User_Language_Locale_Key__c</fullName>
    <description>INTEG-N / NON INTEG - Y / APEX/CC - N|| 
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification 
Desc -|| 
SFA -Y/PRM-Y|| 
VAL - N|| 
CR# -R10.2 # 816 ||</description>
    <label>User Language Locale Key</label>
    <length>16</length>
    <type>Text</type>
</CustomField>